wired up some code in the background polling service and the initial code that will perform the get setlists query

--- a/src/PhishSetlistMonitor.BackgroundService/appsettings.json
+++ b/src/PhishSetlistMonitor.BackgroundService/appsettings.json
@@ -1,8 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "MailjetSettings": {
+        "ApiKey": "",
+        "ApiSecret": ""
+    },
+    "PhishSetlistPollingServiceSettings": {
+        "PollFrequencyMinutes": 10
     }
-  }
 }
