the service now polls the phish.net api and can get a setlist for one day

--- a/src/PhishSetlistMonitor.BackgroundService/appsettings.json
+++ b/src/PhishSetlistMonitor.BackgroundService/appsettings.json
@@ -10,6 +10,15 @@
         "ApiSecret": ""
     },
     "PhishSetlistPollingServiceSettings": {
-        "PollFrequencyMinutes": 10
+        "PollFrequencySeconds": 10
+    },
+    "PhishNetApiHttpClientSettings": {
+        "PhishNetApiBaseUrl": "https://api.phish.net/v5/",
+        "ApiKey": ""
+    },
+    "PhishNetApiHttpClientSettingsEndpoints": {
+        "Endpoints": {
+            "SetlistByDate": "setlists/showdate/{showDate}.json?apikey={apiKey}"
+        }
     }
 }
