--- a/src/PhishSetlistMonitor.BackgroundService/appsettings.Development.json.example
+++ b/src/PhishSetlistMonitor.BackgroundService/appsettings.Development.json.example
@@ -2,5 +2,8 @@
     "MailjetSettings": {
         "ApiKey": "",
         "ApiSecret": ""
+    },
+    "PhishNetApiHttpClientSettings": {
+        "ApiKey": ""
     }
 }
